# bio-architect

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/skills/bio-architect/: SKILL.md
.claude/skills/parse-bio-pdf/: SKILL.md
.claude/skills/parse-bio-pdf/workflows/: parse-bloodwork.md  parse-supplement-label.md  parse-supplement-protocol.md
cli/databases/: bloodwork.py  dna.py  knowledge.py  protocol.py  supplement.py  supplement_protocol.py  supplements.py
docs/Bio-Architect/.obsidian/: workspace.json
docs/Bio-Architect/Planning/System Plan/: Bio-Architect System Plan - Database.md
ralph/: AGENTS.md  README.md  prompt.md  run-ralph-loop.sh
scripts/: bloodwork.py  dna.py  knowledge.py  protocol.py  supplements.py
src/databases/clients/kuzu/: run_kuzu_explorer.sh
src/databases/clients/sqlite/: __init__.py  client.py
src/databases/datatypes/: __init__.py  base.py  validators.py
src/databases/datatypes/bloodwork/: __init__.py  models.py  repository.py  validators.py
src/databases/datatypes/dna/: __init__.py  models.py  repository.py
src/databases/datatypes/knowledge/: __init__.py  models.py  repository.py
src/databases/datatypes/supplement/: __init__.py  models.py  repository.py  validators.py
src/databases/datatypes/supplement_label/: validators.py
src/databases/models/: bloodwork.py  supplement_label.py
src/databases/repositories/: __init__.py  bloodwork.py  dna.py  knowledge.py  protocol.py  supplement.py
tests/unit/scripts/: test_bloodwork_cli.py  test_dna_cli.py  test_knowledge_cli.py  test_protocol_cli.py  test_supplements_cli.py
(+42 files in other folders)
